<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:src="@drawable/ic_petner_logo"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/iv_viewPagerImageThree"
        android:layout_width="@dimen/viewPgerImageWidth"
        android:layout_height="@dimen/viewPagerImageHeight"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:src="@drawable/viewpg3"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_headingvp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_viewPagerImageThree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:text="@string/titlevp3"
        android:textColor="@color/primary"
        android:textSize="@dimen/normalHeadingFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_descriptionvp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_headingvp3"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/normalTextMargin"
        android:text="@string/textvp3"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/normalHeadingFontSize"
        android:textStyle="normal" />

</RelativeLayout>