<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pagePadding"
    tools:context=".ProfileInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/pagePadding"
            android:layout_height="@dimen/pagePadding"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/pet_profile_info"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pagePadding"
        android:gravity="center"
        android:layout_gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_animal_user"/>
        <ImageView
            android:id="@+id/addImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="70dp"
            android:src="@drawable/ic_plus"
            android:padding="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/adoptPetImgMargin"
        android:weightSum="2">

        <TextView
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_with_borders"
            android:text="@string/male"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_margin="@dimen/bottom_margin_10"
            android:textSize="@dimen/font_20sp"
            />
        <TextView
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_with_borders"
            android:text="@string/female"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="@dimen/font_20sp"
            android:layout_margin="@dimen/bottom_margin_10"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pets">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/bottom_margin_10">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adoptPetImgMargin"
                android:layout_marginLeft="@dimen/adoptPetImgMargin"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:checked="true"
                android:text="@string/pure_breed"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adoptPetImgMargin"
                android:layout_marginLeft="@dimen/adoptPetImgMargin"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:text="@string/hybrid"
                android:textColor="@color/primary"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/padding32dp"
        android:background="@drawable/bg_rectangle_edit_text"
        android:hint="@string/label_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/padding_8"
        android:paddingLeft="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8"
        android:paddingRight="@dimen/padding_8" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_rectangle_edit_text"
        android:layout_marginTop="@dimen/bottom_margin_10"
        android:entries="@array/testing"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/bottom_margin_10"
        android:background="@drawable/bg_rectangle_edit_text"
        android:paddingStart="@dimen/padding_8"
        android:paddingLeft="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8"
        android:paddingRight="@dimen/padding_8"
        android:text="Date"
        android:gravity="center_vertical"
        tools:ignore="TextFields" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_rectangle_edit_text"
        android:layout_marginTop="@dimen/bottom_margin_10"
        android:outlineSpotShadowColor="@color/gray"
        android:entries="@array/testing"/>

</LinearLayout>