<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.ui.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:src="@drawable/ic_petner_logo" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:text="@string/welcome"
        android:textColor="@color/primary"
        android:textSize="@dimen/normalHeadingFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_heading"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/normalTextMargin"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/normalHeadingFontSize"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_marginTop="@dimen/normalTextMargin"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/cat" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pets">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adoptPetImgMargin"
                android:layout_marginLeft="@dimen/adoptPetImgMargin"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:checked="true"
                android:text="@string/i_ve_a_dog"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adoptPetImgMargin"
                android:layout_marginLeft="@dimen/adoptPetImgMargin"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:text="@string/i_ve_a_cat"
                android:textColor="@color/primary"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <ImageView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="@dimen/adoptPetImgMargin"
        android:src="@drawable/skip"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/bigButtonWidth"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding32dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_rectangle_filled_primary"
        android:paddingLeft="@dimen/height_50"
        android:paddingRight="@dimen/height_50"
        android:text="@string/next"
        android:layout_below="@id/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

</RelativeLayout>